--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 .nav{
-  background-color: #1577ef;
+  background-color: #8a8d91;
   border-radius: 0.5rem;
   padding: 1%;
 }
@@ -7,7 +7,7 @@
   .mititulo {
     margin-top: 1rem;
     padding: 32px 16px;
-    background-color: #2da595;
+    background-color: #a6a6a7;
     border-radius: 0.5rem;
     text-align: center;
   }
