--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ ul {
     padding: 0;
     overflow: hidden;
     list-style-type: none;
-    background-color: #0a1f9b;
+    background-color: #8a8d91;
     border-radius: 0.5 rem;
   }
   
@@ -33,7 +33,7 @@ ul {
   .mititulo {
     margin-top: 0.5rem;
     padding: 32px 16px;
-    background-color: #2da595;
+    background-color: #a6a6a7;
     border-radius: 0.5rem;
     text-align: center;
   }
