--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@ ul {
   padding: 0;
   overflow: hidden;
   list-style-type: none;
-  background-color: #595353;
+  background-color: #1b24a1;
+  border-radius: 0.5rem;
 }
 
 li {
@@ -22,17 +23,17 @@ li a:hover {
 }
 
 .activo {
-  background-color: #0d147b;
+  background-color: #020205;
 }
 
 .derecha {
   float: right;
 }
 
-.miJumbo {
-  margin-top: 1rem;
+.mititulo {
+  margin-top: 0.2rem;
   padding: 32px 16px;
-  background-color: #e9ecef;
+  background-color: #dab928;
   border-radius: 0.5rem;
   text-align: center;
 }
